welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: not found: value temps
	if(temps <=60 && temp>=100 && isSummer==true)
           ^